<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vishalgaur.testinguserdata.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="serif"
                android:text="@string/detail_title_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/detail_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="monospace"
                android:text="@string/detail_name_label_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                tools:text="Some Name" />

            <TextView
                android:id="@+id/detail_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="monospace"
                android:text="@string/detail_email_label_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                tools:text="someone@example.com" />

            <TextView
                android:id="@+id/detail_mobile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="monospace"
                android:text="@string/detail_mobile_label_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                tools:text="1234567890" />

            <TextView
                android:id="@+id/detail_bio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="monospace"
                android:text="@string/detail_bio_label_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-black"
                android:textSize="24sp"
                tools:text="A Tech Geek and StudentA Tech Geek and StudentA Tech Geek and Student" />

            <Button
                android:id="@+id/detail_go_back_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/purple_500"
                android:drawableStart="@drawable/abc_vector_test"
                android:text="@string/detail_go_back_btn_text"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>